--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "@types/date-fns": "^2.6.0",
+    "apexcharts": "^3.8.6",
+    "availity-reactstrap-validation": "^2.6.0",
     "bootstrap": "^4.3.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "date-fns": "^2.4.1",
+    "firebase": "^7.1.0",
+    "pdfmake": "^0.1.60",
+    "react": "^16.10.2",
+    "react-apexcharts": "^1.3.3",
+    "react-dom": "^16.10.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.8",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
